RESOLVED FIXED258000
ASSERTION FAILED: !isMainRunLoop() in WebCore::SWRegistrationDatabase::close
https://bugs.webkit.org/show_bug.cgi?id=258000
Summary ASSERTION FAILED: !isMainRunLoop() in WebCore::SWRegistrationDatabase::close
Fujii Hironori
Reported 2023-06-12 20:57:32 PDT
This isn't 100% reproducible step for the assertion failure 1. Start WinCairo Debug MiniBrowser 2. Close the window 3. ASSERTION FAILED ASSERTION FAILED: !isMainRunLoop() C:\home\webkit\gc\Source\WebCore\workers/service/server/SWRegistrationDatabase.cpp(220) : WebCore::SWRegistrationDatabase::close The thread 0x16b0 has exited with code 0 (0x0). 1 00007FF9509326FB WTFCrash 2 00007FF91A5B33AE WTFCrashWithInfo 3 00007FF91EFF53CF WebCore::SWRegistrationDatabase::close 4 00007FF91EFF2824 WebCore::SWRegistrationDatabase::~SWRegistrationDatabase 5 00007FF94A67A259 WebCore::SWRegistrationDatabase::`scalar deleting destructor' 6 00007FF94A679180 std::default_delete<WebCore::SWRegistrationDatabase>::operator() 7 00007FF94A66C333 std::unique_ptr<WebCore::SWRegistrationDatabase,std::default_delete<WebCore::SWRegistrationDatabase> >::~unique_ptr<WebCore::SWRegistrationDatabase,std::default_delete<WebCore::SWRegistrationDatabase> > 8 00007FF94A66C69B WebKit::ServiceWorkerStorageManager::~ServiceWorkerStorageManager 9 00007FF94A67A2B8 WebKit::ServiceWorkerStorageManager::`scalar deleting destructor' 10 00007FF94A6791D0 std::default_delete<WebKit::ServiceWorkerStorageManager>::operator() 11 00007FF94A66C383 std::unique_ptr<WebKit::ServiceWorkerStorageManager,std::default_delete<WebKit::ServiceWorkerStorageManager> >::~unique_ptr<WebKit::ServiceWorkerStorageManager,std::default_delete<WebKit::ServiceWorkerStorageManager> > 12 00007FF94A61521D WebKit::NetworkStorageManager::~NetworkStorageManager 13 00007FF94A67A038 WebKit::NetworkStorageManager::`scalar deleting destructor' 14 00007FF949A3784E `WTF::ThreadSafeWeakPtrControlBlock::strongDeref<IPC::WorkQueueMessageReceiver,0>'::`2'::<lambda_1>::operator() 15 00007FF949A276C1 WTF::ThreadSafeWeakPtrControlBlock::strongDeref<IPC::WorkQueueMessageReceiver,0> 16 00007FF949A3BD97 WTF::ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr<IPC::WorkQueueMessageReceiver,0>::deref 17 00007FF949A30803 WTF::Ref<WebKit::NetworkStorageManager,WTF::RawPtrTraits<WebKit::NetworkStorageManager> >::~Ref<WebKit::NetworkStorageManager,WTF::RawPtrTraits<WebKit::NetworkStorageManager> > 18 00007FF94A620C28 ``WebKit::NetworkStorageManager::close'::`2'::<lambda_2>::operator()'::`2'::<lambda_1>::~<lambda_1> 19 00007FF94A630A3B WTF::Detail::CallableWrapper<``WebKit::NetworkStorageManager::close'::`2'::<lambda_2>::operator()'::`2'::<lambda_1>,void>::~CallableWrapper<``WebKit::NetworkStorageManager::close'::`2'::<lambda_2>::operator()'::`2'::<lambda_1>,void> 20 00007FF94A630A78 WTF::Detail::CallableWrapper<``WebKit::NetworkStorageManager::close'::`2'::<lambda_2>::operator()'::`2'::<lambda_1>,void>::`scalar deleting destructor' 21 00007FF95093EF1F std::default_delete<WTF::Detail::CallableWrapperBase<void> >::operator() 22 00007FF95093E613 std::unique_ptr<WTF::Detail::CallableWrapperBase<void>,std::default_delete<WTF::Detail::CallableWrapperBase<void> > >::~unique_ptr<WTF::Detail::CallableWrapperBase<void>,std::default_delete<WTF::Detail::CallableWrapperBase<void> > > 23 00007FF95093E257 WTF::Function<void __cdecl(void)>::~Function<void __cdecl(void)> 24 00007FF9509DD0F2 WTF::RunLoop::performWork 25 00007FF950ABED21 WTF::RunLoop::wndProc 26 00007FF950ABEC84 WTF::RunLoop::RunLoopWndProc 27 00007FF9F4E9E858 CallWindowProcW 28 00007FF9F4E9E299 DispatchMessageW 29 00007FF950ABE166 WTF::RunLoop::run 30 00007FF9496BC67B WebKit::AuxiliaryProcessMainBase<WebKit::NetworkProcess,0>::run 31 00007FF9496BBE83 WebKit::AuxiliaryProcessMain<WebKit::NetworkProcessMainCurl>
Attachments
Fujii Hironori
Comment 1 2023-06-12 21:29:26 PDT
EWS
Comment 2 2023-06-14 19:42:16 PDT
Committed 265176@main (ee0c81c80657): <https://commits.webkit.org/265176@main> Reviewed commits have been landed. Closing PR #14904 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-06-14 19:43:17 PDT
Note You need to log in before you can comment on or make changes to this bug.