ASSERTION FAILED: !isMainRunLoop() in WebCore::SWRegistrationDatabase::close https://bugs.webkit.org/show_bug.cgi?id=258000

Reviewed by Youenn Fablet.

NetworkStorageManager should destroy
m_sharedServiceWorkerStorageManager in the m_queue thread. Added
WTF_GUARDED_BY_CAPABILITY for m_sharedServiceWorkerStorageManager.
Added more assertIsCurrent(workQueue()) in lambda functions.

* Source/WebKit/NetworkProcess/storage/NetworkStorageManager.cpp:
(WebKit::NetworkStorageManager::NetworkStorageManager):
(WebKit::NetworkStorageManager::close):
(WebKit::NetworkStorageManager::clearServiceWorkerRegistrations):
(WebKit::NetworkStorageManager::importServiceWorkerRegistrations):
(WebKit::NetworkStorageManager::updateServiceWorkerRegistrations):
* Source/WebKit/NetworkProcess/storage/NetworkStorageManager.h:

Canonical link: https://commits.webkit.org/265176@main